tests/ui/fail/log_misplaced_attr.stderr
error: the emit attribute macros can only be placed on the outside of a field-value expression
 --> fail/log_misplaced_attr.rs:6:37
  |
6 |     emit::info!("Some text", value: #[emit::as_display] a);
  |                                     ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `emit::as_display` (in Nightly builds, run with -Z macro-backtrace for more info)
